Turn menu into maintenance mode

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
     <script type="text/javascript">
         window.addEventListener("load", function(){
             //⚡ Set navbar's menu to maintenance mode
-            $(".icon-menu-item, .account-menu-item").on('click', (e) => {
+            $(".icon-menu-item, .account-menu-item, .main-menu-item").on('click', (e) => {
                 e.preventDefault();
                 
                 Swal.fire({
