--- a/menu.html
+++ b/menu.html
@@ -2,38 +2,38 @@
     <div class="scroll">
         <ul class="list-unstyled">
             <li>
-                <a href="#dashboard">
+                <a class="main-menu-item" href="#dashboard">
                     <i class="iconsminds-shop-4"></i>
                     <span>Dashboards</span>
                 </a>
             </li>
             <li class="active">
-                <a href="#layouts">
+                <a class="main-menu-item" href="#layouts">
                     <i class="iconsminds-digital-drawing"></i> Pages
                 </a>
             </li>
             <li>
-                <a href="#applications">
+                <a class="main-menu-item" href="#applications">
                     <i class="iconsminds-air-balloon-1"></i> Applications
                 </a>
             </li>
             <li>
-                <a href="#ui">
+                <a class="main-menu-item" href="#ui">
                     <i class="iconsminds-pantone"></i> UI
                 </a>
             </li>
             <li>
-                <a href="#menu">
+                <a class="main-menu-item" href="#menu">
                     <i class="iconsminds-three-arrow-fork"></i> Menu
                 </a>
             </li>
             <li>
-                <a href="Blank.Page.html">
+                <a class="main-menu-item" href="Blank.Page.html">
                     <i class="iconsminds-bucket"></i> Blank Page
                 </a>
             </li>
             <li>
-                <a href="https://dore-jquery-docs.coloredstrategies.com" target="_blank">
+                <a class="main-menu-item" href="https://dore-jquery-docs.coloredstrategies.com" target="_blank">
                     <i class="iconsminds-library"></i> Docs
                 </a>
             </li>
