--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/vendor/jquery.contextMenu.min.css" />
     <link rel="stylesheet" href="css/vendor/jquery.toast.min.css">
     <!-- AOS -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
     <link rel="stylesheet" href="css/vendor/perfect-scrollbar.css" />
     <link rel="stylesheet" href="css/vendor/component-custom-switch.min.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -123,11 +123,11 @@
                                     </div>
                                 </div>
                                 <div class="search-sm d-inline-block float-md-left mr-1 mb-1 align-top">
-                                    <input placeholder="Search...">
+                                    <input id="search" placeholder="Search...">
                                 </div>
                             </div>
                             <div class="float-md-right">
-                                <span id="items-count" class="text-muted text-small">Loading items &nbsp;<div class="spinner-border text-muted spinner-border-sm"></div></span>
+                                <span id="items-count" class="text-muted text-small">Tracking items &nbsp;<div class="spinner-border text-muted spinner-border-sm"></div></span>
                             </div>
                         </div>
                     </div>
@@ -135,9 +135,8 @@
                 </div>
             </div>
 
-            <div class="row my-shuffle-container" id="list">
+            <div class="row grid" id="list">
                 <!-- ⚡ All items will be render in here, 1 sample item below-->
-                <div class="col-1@sm my-sizer-element"></div>
             </div>
         </div>
     </main>
@@ -167,9 +166,9 @@
     <script src="js/vendor/jquery.contextMenu.min.js"></script>
     <script src="js/vendor/sweetalert2.all.min.js"></script>
     <script src="js/vendor/jquery.toast.min.js"></script>
-    <script src="js/vendor/shufflejs/shuffle.min.js"></script>
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <!-- AOS -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
     <!-- Add Firebase products that you want to use -->
@@ -185,6 +184,13 @@
         //     duration: 1000,
         //     mirror: true
         // });
+
+        $(".filter").on('click', function(event) {
+            event.preventDefault();
+
+            var box = $(this).data("filter");
+            $(".grid").isotope({ filter: '.' + box });
+        });
 
         window.addEventListener("load", function(){
             //⚡ Get current date
@@ -220,24 +226,13 @@
             var defaultDatabase = firebase.database();
 
             //⚡ Get and render all items only once time + create list from ListJS
-            var newestRef = firebase.database().ref('items');
-            var Shuffle = window.Shuffle;
-            var element = $(".my-shuffle-container");
-            var shuffleInstance = new Shuffle(element, {
-                itemSelector: ".item-in-box"
-            });
-
-            $(".filter").on('click', function(event) {
-                event.preventDefault();
-
-                shuffleInstance.filter($(this).data("filter"));
-            });
+            var newestRef = firebase.database().ref('items').orderByKey();
 
             //⚡ Listen to items change
             newestRef.on('child_added', (data) => {
                 //addCommentElement(postElement, data.key, data.val().text, data.val().author);
                 var html = `
-                    <div data-groups='["${data.val().box}"]' data-title="${data.val().title}" class="col-12 col-lg-6 mb-5 item-in-box">
+                    <div class="col-12 col-lg-6 mb-5 item-in-box grid-item ${data.val().box}">
                         <div class="card flex-row listing-card-container">
                             <div class="w-40 position-relative">
                                 <a href="detail.html?key=${data.key}">
@@ -259,9 +254,6 @@
                     </div>
                 `;
                 $("#list").prepend(html);
-                shuffleInstance = new Shuffle(element, {
-                    itemSelector: ".item-in-box"
-                });
 
                 // $.toast({
                 //     heading: "✔️ An item has been added",
