--- a/navbar.html
+++ b/navbar.html
@@ -95,7 +95,7 @@
             <button class="header-icon btn btn-empty" type="button" id="notificationButton"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="simple-icon-bell"></i>
-                <span class="count">3</span>
+                <span class="count">1</span>
             </button>
             <div class="dropdown-menu dropdown-menu-right mt-3 position-absolute" id="notificationDropdown">
                 <div class="scroll">
@@ -106,44 +106,7 @@
                         </a>
                         <div class="pl-3">
                             <a href="#">
-                                <p class="font-weight-medium mb-1">Joisse Kaycee just sent a new comment!</p>
-                                <p class="text-muted mb-0 text-small">09.04.2018 - 12:45</p>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="d-flex flex-row mb-3 pb-3 border-bottom">
-                        <a href="#">
-                            <img src="img/notifications/1.jpg" alt="Notification Image"
-                                class="img-thumbnail list-thumbnail xsmall border-0 rounded-circle" />
-                        </a>
-                        <div class="pl-3">
-                            <a href="#">
-                                <p class="font-weight-medium mb-1">1 item is out of stock!</p>
-                                <p class="text-muted mb-0 text-small">09.04.2018 - 12:45</p>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="d-flex flex-row mb-3 pb-3 border-bottom">
-                        <a href="#">
-                            <img src="img/notifications/2.jpg" alt="Notification Image"
-                                class="img-thumbnail list-thumbnail xsmall border-0 rounded-circle" />
-                        </a>
-                        <div class="pl-3">
-                            <a href="#">
-                                <p class="font-weight-medium mb-1">New order received! It is total $147,20.</p>
-                                <p class="text-muted mb-0 text-small">09.04.2018 - 12:45</p>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="d-flex flex-row mb-3 pb-3 ">
-                        <a href="#">
-                            <img src="img/notifications/3.jpg" alt="Notification Image"
-                                class="img-thumbnail list-thumbnail xsmall border-0 rounded-circle" />
-                        </a>
-                        <div class="pl-3">
-                            <a href="#">
-                                <p class="font-weight-medium mb-1">3 items just added to wish list by a user!
-                                </p>
+                                <p class="font-weight-medium mb-1">⚠️ Animations on scroll are having bugs, we are fixing it.</p>
                                 <p class="text-muted mb-0 text-small">09.04.2018 - 12:45</p>
                             </a>
                         </div>
